# Sistema_GNU_Escolar

./: CMakeLists.txt  README.md  run.sh
src/: main.c
